added no script static html for seo

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="description"
+    content="“精英天下”中高级人才招聘会作为中国国际人才交流大会重要板块，每年均吸引上万名优秀的海内外中高级人才参会。本届精英天下将以云招聘平台+云端直播间相结合的新模式，通过互联网的传播优势，加大服务企业招揽优秀人才的力度。">
+  <meta name="keywords" content="中国国际人才交流大会,精英天下,国际人才交流合作,深圳千里马国际猎头有限公司,人才项目,科技创新,项目对接,引才引智,龙门创将,外籍人才招聘会,海归招聘会,智聘百强">
   <link rel="icon" href="<%= BASE_URL %>favicon.png">
   <title>精英天下·云招会</title>
-  <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.0/animate.compat.min.css" rel="stylesheet">
+  <noscript>
+    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+  </noscript>
   <style>
     .spinner {
       margin: 100px auto;
@@ -84,8 +89,168 @@
 
 <body>
   <noscript>
-    <strong>We're sorry but ciep doesn't work properly without JavaScript enabled. Please enable it to
-      continue.</strong>
+    <div style="margin-bottom: 0px;">
+      <nav class="navbar navbar-light navbar-expand-md shadow-sm d-xl-flex navigation-clean-button">
+        <div class="container">
+          <div>
+            <a href="https://www.szhr.com.cn/hrmall/szhr/ciep/index.html" target="_blank">
+              <img class="img-fluid d-xl-flex justify-content-start justify-content-xl-start img-fluid"
+                src="assets/img/ciep_logo.png">
+            </a>
+          </div>
+          <a href="https://www.szhr.com.cn/hrmall/szhr/ciep/index.html" target="_blank">
+            <img class="img-fluid d-lg-flex align-items-start img-fluid" src="assets/img/title.png"
+              style="width: 400px;">
+          </a>
+          <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle
+              navigation</span><span class="navbar-toggler-icon"></span></button>
+          <div class="collapse navbar-collapse d-xl-flex" id="navcol-1" style="padding-right: 0px;margin-left: 15px;">
+            <ul class="nav navbar-nav">
+              <li class="nav-item" role="presentation"><a class="nav-link" href="http://www.ciep.gov.cn/"
+                  style="padding-left: 10px;padding-right: 10px;color: rgb(4,4,4);font-size: 20px;">大会官网</a>
+              </li>
+              <li class="dropdown nav-item"><a class="dropdown-toggle nav-link" data-toggle="dropdown"
+                  aria-expanded="false"
+                  style="padding-right: 10px;padding-left: 10px;color: rgb(0,0,0);font-size: 20px;">会展服务&nbsp;</a>
+                <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation"
+                    href="https://www.szhr.com.cn/web3new/seekjob/person-reg.action">人才参会</a><a class="dropdown-item"
+                    role="presentation" href="https://www.szhr.com.cn/web3new/recruit/quick-register.action">企业参会</a><a
+                    class="dropdown-item" role="presentation"
+                    href="https://www.szhr.com.cn/hrmall/szhr/ciep/live_schedules.html">招聘直播间</a></div>
+              </li>
+              <li class="nav-item" role="presentation"><a class="nav-link" href="http://ciep.sznews.com/node_301787.htm"
+                  style="padding-right: 10px;padding-left: 10px;color: rgb(0,0,0);font-size: 20px;">活动新闻</a>
+              </li>
+              <li class="nav-item" role="presentation"><a class="nav-link"
+                  style="padding-right: 10px;padding-left: 10px;color: rgb(0,0,0);font-size: 20px;" data-toggle="modal"
+                  data-target="#contact-modal">联系我们</a></li>
+            </ul><span class="navbar-text actions"> <a
+                class="btn btn-light border rounded border-info shadow action-button" role="button"
+                href="https://www.szhr.com.cn/web3new/seekjob/login.action"
+                style="background-color: rgb(248,248,248);color: rgb(11,3,3);margin-right: 5px;">登录</a><a
+                class="btn btn-light border rounded shadow action-button" role="button"
+                href="https://www.szhr.com.cn/web3new/seekjob/person-reg.action"
+                style="background-color: rgb(41,162,249);">注册</a></span>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <section style="padding-top: 0px;padding-bottom: 0px;">
+      <div class="carousel slide" data-ride="carousel" id="carousel-1">
+        <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active"><a href="https://www.szhr.com.cn/web3new/seekjob/person-reg.action"
+              target="_blank"><img class="w-100 img-fluid
+                        " src="assets/img/ciep_banner.jpg" alt="Slide Image" /></a></div>
+        </div>
+        <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"><span
+              class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a
+            class="carousel-control-next" href="#carousel-1" role="button" data-slide="next"><span
+              class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+        </ol>
+      </div>
+    </section>
+    <section style="background-color: #eee; padding: 0">
+      <div class="container align-content-center">
+        <div class="row" align="center">
+          <div class="col-md-12 col-sm-12 col-xs-12" style="margin-top: 15px; margin-bottom:15px;" align="center"
+            id="search_bar">
+            <div class="input-group">
+              <input type="hidden" name="search_param" value="all" id="search_param">
+              <input type="text" class="form-control" name="x" placeholder="搜索职位/公司" style="padding: 20px"
+                id="search-box">
+              <span class="input-group-btn">
+                <button id="search-btn" class="btn btn-default" type="button" style="margin-top: 0px"><span
+                    class="glyphicon glyphicon-search"></span></button>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="shadow-sm article-clean" style="background-color: rgb(255,255,255);">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 col-xl-8 offset-lg-1 offset-xl-2 text-justify">
+            <div class="intro">
+              <div class="text-center">
+                <img class="img-fluid" src="@/assets/img/ciep_large_logo.png" />
+              </div>
+            </div>
+            <div class="text">
+              <p>
+                中国国际人才交流大会是经国务院批准，目前我国唯一专门对外国专家组织、培训机构、专业人才开放的规模最大、规格最高的国家级、国际性的人才与智力交流盛会，是一个集人才、智力、技术、项目管理为一体的综合性大会。
+                <br />
+              </p>
+              <p>
+                “精英天下”中高级人才招聘会作为中国国际人才交流大会重要板块，每年均吸引上万名优秀的海内外中高级人才参会。本届精英天下将以云招聘平台+云端直播间相结合的新模式，通过互联网的传播优势，加大服务企业招揽优秀人才的力度。
+              </p>
+              <p>热线电话：400-886-5539</p>
+              <p>主办单位：国家外国专家局、深圳市人民政府</p>
+              <p>承办单位：深圳市外国专家局、深圳国际人才交流中心</p>
+              <p>协办单位：深圳千里马国际猎头有限公司</p>
+              <p>
+                大会官网：
+                <a href="http://www.ciep.gov.cn/" target="_blank">http://www.ciep.gov.cn/</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="bg-light footer-clean" style="background-color: #fcfcfc;">
+      <footer>
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-4 col-sm-4 col-md-3 item">
+              <h3><strong>导航链接</strong></h3>
+              <ul>
+                <li><a href="http://www.ciep.gov.cn/">大会官网</a></li>
+                <li><a href="https://www.szhr.com.cn/hrmall/szhr/ciep/index.html">精英天下首页</a></li>
+                <li><a href="https://www.szhr.com.cn/hrmall/szhr/ciep/industries.html">行业导览</a></li>
+                <!-- <li><a href="#">最新职位</a></li> -->
+                <li><a href="https://www.szhr.com.cn/">深圳人才网</a></li>
+              </ul>
+            </div>
+            <div class="col-4 col-sm-4 col-md-3 text-center item">
+              <h3>大会服务</h3>
+              <ul>
+                <li><a href="https://www.szhr.com.cn/web3new/recruit/quick-register.action">企业注册</a></li>
+                <li><a href="https://www.szhr.com.cn/web3new/seekjob/person-reg.action">人才注册</a></li>
+                <li><a href="https://www.szhr.com.cn/hrmall/szhr/ciep/companies.html">参会企业</a></li>
+                <!-- <li><a href="#">在线面试</a></li> -->
+                <li><a href="https://www.szhr.com.cn/hrmall/szhr/ciep/live_schedules.html">宣讲直播</a></li>
+              </ul>
+            </div>
+            <div class="col-4 text-right"><img class="img-fluid" src="assets/img/qrcode_cnszhr.jpg">
+              <p class="copyright">深圳千里马国际猎头有限公司</p>
+              <p class="copyright">&nbsp;ICP备案编号粤<a href="http://www.miitbeian.gov.cn/">B2-20050045号</a></p>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
+    <div class="modal fade" role="dialog" tabindex="-1" id="contact-modal">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">联系方式</h4><button type="button" class="close" data-dismiss="modal"
+              aria-label="Close"><span aria-hidden="true">×</span></button>
+          </div>
+          <div class="modal-body">
+            <p>咨询电话: 4008865539</p>
+            <p>洽谈合作: szhr@szhr.com</p>
+            <p>咨询电话: 4008865539</p>
+            <p>微信公众号: cnszhr</p>
+            <p>业务范围: 网络招聘、委托招聘、招聘外包</p>
+            <p>地址: 深圳市罗湖区宝安北路粤港澳大湾区人才产业园</p>
+          </div>
+          <div class="modal-footer"><button class="btn btn-light" type="button" data-dismiss="modal">关闭</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </noscript>
   <div id="app">
     <div class="spinner">
